[css] fix for B154 - text wrap for nav links

--- a/public/sximo/css/sximo-light-blue.css
+++ b/public/sximo/css/sximo-light-blue.css
@@ -2500,3 +2500,10 @@ table#itemTable input[type="text"]{
     position:relative !important;
     top:3px;
 }
+
+#sidemenu.nav > li > a i {
+  margin-right: 0;
+}
+#sidemenu.nav .nav li > a {
+  margin-right: 6px;
+}
